chore: cleanup getter API definition